# ai-chat-assistant

./: .env.example  README.md  pyproject.toml
core/: __main__.py  config.py  container_runner.py
core/agent/: __init__.py  engine.py  session.py
core/channels/: __init__.py  telegram.py
core/memory/: __init__.py
core/scheduler/: __init__.py
core/security/: url_validator.py
core/tools/: __init__.py  bash.py  file_ops.py  web_fetch.py
migrations/: 001_initial.sql
working_dir/: test_file.txt
